Fix mobile-toggle-search bug on mobile view

--- a/themes/evans-lake/sass/_front-page.scss
+++ b/themes/evans-lake/sass/_front-page.scss
@@ -22,7 +22,7 @@
     cursor: pointer;
     font-size: 3.5rem;
     position: absolute;
-    bottom: 7%;
+    bottom: 8%;
     transform: translateX(-50%);
     @include desktop {
       left: 50%;
